--- a/python_notebooks/test_generate_plots.ipynb
+++ b/python_notebooks/test_generate_plots.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m运行具有“.conda (Python 3.11.14)”的单元格需要ipykernel包。\n",
+      "\u001b[1;31m将“ipykernel”安装到 Python 环境中。\n",
+      "\u001b[1;31m命令:“conda install -p /Users/yifanxu/Library/Mobile Documents/com~apple~CloudDocs/IS455/is455_website/.conda ipykernel --update-deps --force-reinstall”"
+     ]
+    }
+   ],
    "source": [
     "from vega_datasets import data as datasets\n",
     "\n",
@@ -365,7 +376,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".conda",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
